haste-server-yamls/haste-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haste-server
  labels:
    app: haste-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haste-server
  template:
    metadata:
      labels:
        app: haste-server
    spec:
      containers:
      - name: haste-server
        image: ghcr.io/velito86/haste-server/haste-server:v3
        ports:
        - containerPort: 7777
        -name: STORAGE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: postgres-secret
              key: password
