haste-server-yamls/haste-server-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: haste-server
  labels:
    app: haste-server
spec:
  type: NodePort
  ports:
   - port: 7777
  selector:
   app: haste-server
