haste-server-yamls/haste-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haste-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules: 
  - host: haste-server.com
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: haste-server
            port: 
              number: 7777
